@@ -3,6 +3,13 @@ apply plugin: 'java-library'
 [compileJava, compileTestJava]*.options*.encoding = 'UTF-8'
 sourceCompatibility = targetCompatibility = appJavaCompatibility
 
+tasks.withType(JavaCompile) {
+    options.compilerArgs.addAll([
+            '--add-exports',
+            'java.base/sun.net.www.protocol.file=ALL-UNNAMED'
+    ])
+}
+
 dependencies {
     api "com.badlogicgames.gdx:gdx:$gdxVersion"
     api "com.badlogicgames.gdx-controllers:gdx-controllers-core:$gdxControllersVersion"
